# RTM2

.github/workflows/: gitee-sync.yml
Agora-RTM2-QuickStart-Android-Java/: README.md  README.zh.md  build.gradle
Agora-RTM2-QuickStart-Android-Java/app/: build.gradle
Agora-RTM2-QuickStart-Android-Kotlin/: README.md  README.zh.md  settings.gradle
Agora-RTM2-QuickStart-Android-Kotlin/app/: build.gradle
Agora-RTM2-QuickStart-Flutter/: .gitignore  README.md  pubspec.yaml
Agora-RTM2-QuickStart-Flutter/lib/: main.dart
Agora-RTM2-QuickStart-Flutter/linux/: CMakeLists.txt  my_application.cc
Agora-RTM2-QuickStart-Flutter/test/: widget_test.dart
Agora-RTM2-QuickStart-Flutter/web/: index.html  manifest.json
Agora-RTM2-QuickStart-Linux-C++/: README.md  README.zh.md  build.sh  rtm_quick_start.cpp
Agora-RTM2-QuickStart-Linux-CPP/: .gitignore  CMakeLists.txt  README.md  README.zh.md  rtm_quick_start.cpp
Agora-RTM2-QuickStart-Linux-CPP/include/: PLACEHOLDER
Agora-RTM2-QuickStart-Linux-Java/: .gitignore  README.md  README.zh.md  clear.sh  pom.xml
Agora-RTM2-QuickStart-Windows-C++/: .gitignore  README.md  README.zh.md
Agora-RTM2-QuickStart-iOS-Objective-C/: README.md  README.zh.md
Agora-RTM2-QuickStart-iOS-Swift/: README.md  README.zh.md
Agora-RTM2-Tutorial-Android-Java/: README.md  README.zh.md  build.gradle
Agora-RTM2-Tutorial-Android-Kotlin/: .gitignore  README.md  README.zh.md
debug-console/: .editorconfig  .eslintignore  .eslintrc.js  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
rtm-sdk-java/: LICENSE
(+126 files in other folders)
